--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,27 +23,35 @@ environment:
       COMPILER: "Visual Studio 14 2015 Win64"
 
 install:
-    - echo "submodule"
+    - echo "submodule %APPVEYOR_BUILD_FOLDER%"
     - git submodule -q update --init --recursive
-    - cd "%APPVEYOR_BUILD_FOLDER%\third_party\"
+    - cd %APPVEYOR_BUILD_FOLDER%\third_party\
+    - echo "start build of PTW32"
+    ############
     - mkdir PthreadWin32
     - git clone -q https://github.com/GerHobbelt/pthread-win32.git PthreadWin32
     - cd PthreadWin32
-    # bit of magic from camomille (pierreguillot)
+    - echo "bit of magic from camomille (pierreguillot)"
+    ############
     - sed -i 's/4820;4668;4255;/4820;4668;4255;4711;4100;4312;4127;4296;4456;4619;4310;4311;/' pthread_lib.2015.vcxproj
     - sed -i 's/MultiThreadedDLL/MultiThreaded/' pthread_lib.2015.vcxproj
     - sed -i 's/MultiThreadedDebugDLL/MultiThreadedDebug/' pthread_lib.2015.vcxproj
+    - echo "truely building PTW32"
+    ##############
     - msbuild pthread.2015.sln /t:pthread_lib /nologo /verbosity:quiet /p:Configuration=Release /p:Platform=%PLATFORM% /p:OutDir=lib/
-    # Copy pthread-win32 headers and library in pure-data directory
-    - set LIBPDROOT = "%APPVEYOR_BUILD_FOLDER%\third_party\libpd"
+
+    - echo "Copy pthread-win32 headers and library in pure-data directory"
+    #############
+    - set LIBPDROOT="%APPVEYOR_BUILD_FOLDER%\third_party\libpd"
     - copy pthread.h %LIBPDROOT%\pure-data\src\pthread.h
     - copy sched.h %LIBPDROOT%\pure-data\src\sched.h
     - copy semaphore.h %LIBPDROOT%\pure-data\src\semaphore.h
-    - set PD_BUILD_DIR = "%APPVEYOR_BUILD_FOLDER%\third_party\libpdBuild"
+    - set PD_BUILD_DIR="%APPVEYOR_BUILD_FOLDER%\third_party\libpdBuild"
     - copy lib\pthread_lib.lib %PD_BUILD_DIR%\VisualStudio2015\pthread.lib
     - copy lib\pthread_lib.lib %PD_BUILD_DIR%\pthread.lib
 
-    # Compile libpd
+    - echo "Compile libpd"
+    #################
     - cd %APPVEYOR_BUILD_FOLDER%\Dependencies\LibPdBuild\VisualStudio2015
     - cmake -G "%COMPILER%" ..
     - msbuild libpd.sln /t:libpdstatic /nologo /verbosity:quiet /p:Configuration=Release /p:Platform=%PLATFORM%
