RPI CI set CC compiler too

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,6 +135,7 @@ jobs:
             apt-get install -y git
             git submodule update --init --recursive
             export CXX=arm-linux-gnueabihf-g++-5
+            export CC=arm-linux-gnueabihf-gcc-5
             sh Scripts/linux/installDeps.sh && sh Scripts/linux/installDevDeps.sh
             
 
