Save Preset in separate file / faster Parameter address resolving

--- a/Builds/VisualStudio2015/LGML_App.vcxproj
+++ b/Builds/VisualStudio2015/LGML_App.vcxproj
@@ -385,6 +385,7 @@
     <ClCompile Include="..\..\Source\Node\UI\ConnectorComponent.cpp"/>
     <ClCompile Include="..\..\Source\Node\ConnectableNode.cpp"/>
     <ClCompile Include="..\..\Source\Node\NodeBase.cpp"/>
+    <ClCompile Include="..\..\Source\Preset\Preset.cpp"/>
     <ClCompile Include="..\..\Source\Preset\PresetChooserUI.cpp"/>
     <ClCompile Include="..\..\Source\Preset\PresetManager.cpp"/>
     <ClCompile Include="..\..\Source\Scripting\Js\JsContainerSync.cpp"/>
@@ -2378,6 +2379,7 @@
     <ClInclude Include="..\..\Source\Node\UI\ConnectorComponent.h"/>
     <ClInclude Include="..\..\Source\Node\ConnectableNode.h"/>
     <ClInclude Include="..\..\Source\Node\NodeBase.h"/>
+    <ClInclude Include="..\..\Source\Preset\Preset.h"/>
     <ClInclude Include="..\..\Source\Preset\PresetChooserUI.h"/>
     <ClInclude Include="..\..\Source\Preset\PresetManager.h"/>
     <ClInclude Include="..\..\Source\Scripting\Js\JsContainerSync.h"/>
