--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -53,7 +53,7 @@ install:
     - echo "Compile libpd"
     #################
     - cd %PD_BUILD_DIR%\VisualStudio2015
-    - cmake -G "%COMPILER%" ..
+    - cmake -G "%COMPILER%" -DPD_MULTI=ON -DPD_EXTRA=ON -DPD_UTILS=ON ..
     - msbuild libpd.sln /t:libpdstatic /nologo /verbosity:quiet /p:Configuration=Release /p:Platform=%PLATFORM%
 
 before_build:
